config("googlemock_config") {
  include_dirs = [ "include" ]
}

static_library("googlemock") {
  testonly = true
  sources = [
    "include/gmock/gmock-actions.h",
    "include/gmock/gmock-cardinalities.h",
    "include/gmock/gmock-generated-actions.h",
    "include/gmock/gmock-generated-function-mockers.h",
    "include/gmock/gmock-generated-matchers.h",
    "include/gmock/gmock-generated-nice-strict.h",
    "include/gmock/gmock-matchers.h",
    "include/gmock/gmock-more-actions.h",
    "include/gmock/gmock-more-matchers.h",
    "include/gmock/gmock-spec-builders.h",
    "include/gmock/gmock.h",
    "include/gmock/internal/gmock-generated-internal-utils.h",
    "include/gmock/internal/gmock-internal-utils.h",
    "include/gmock/internal/gmock-port.h",

    #"src/gmock-all.cc",  # Not needed by our build.
    "src/gmock-cardinalities.cc",
    "src/gmock-internal-utils.cc",
    "src/gmock-matchers.cc",
    "src/gmock-spec-builders.cc",
    "src/gmock.cc",
  ]

  public_configs = [ ":googlemock_config" ]

  public_deps = [
    "../googletest",
  ]
}

static_library("googlemock_main") {
  testonly = true
  sources = [
    "src/gmock_main.cc",
  ]
  deps = [
    ":googlemock",
  ]
}
